// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<ForwardRef(forwardRef)
  className="Stream-root"
  size="double"
>
  <ForwardRef(forwardRef)>
    <withContext(createMutationContainer(withContext(createMutationContainer(withContext(createMutationContainer(withContext(withLocalStateContainer(Relay(UserBoxContainer)))))))))
      me={null}
      settings={
        Object {
          "reaction": Object {
            "icon": "thumb_up_alt",
            "label": "Respect",
          },
        }
      }
    />
    <Relay(CommunityGuidelinesContainerProps)
      settings={
        Object {
          "reaction": Object {
            "icon": "thumb_up_alt",
            "label": "Respect",
          },
        }
      }
    />
    <PostCommentFormFake />
  </ForwardRef(forwardRef)>
  <SortMenu
    onChange={[Function]}
    orderBy="CREATED_AT_ASC"
  />
  <ForwardRef(forwardRef)
    aria-live="polite"
    data-testid="comments-stream-log"
    id="talk-comments-stream-log"
    role="log"
  >
    <ForwardRef(forwardRef)
      key="comment-1"
    >
      <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
        comment={
          Object {
            "id": "comment-1",
          }
        }
        me={null}
        settings={
          Object {
            "reaction": Object {
              "icon": "thumb_up_alt",
              "label": "Respect",
            },
          }
        }
        story={
          Object {
            "id": "story-id",
            "isClosed": false,
          }
        }
      />
      <withProps(Relay(ReplyListContainer))
        comment={
          Object {
            "id": "comment-1",
          }
        }
        me={null}
        settings={
          Object {
            "reaction": Object {
              "icon": "thumb_up_alt",
              "label": "Respect",
            },
          }
        }
        story={
          Object {
            "id": "story-id",
            "isClosed": false,
          }
        }
      />
    </ForwardRef(forwardRef)>
    <ForwardRef(forwardRef)
      key="comment-2"
    >
      <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
        comment={
          Object {
            "id": "comment-2",
          }
        }
        me={null}
        settings={
          Object {
            "reaction": Object {
              "icon": "thumb_up_alt",
              "label": "Respect",
            },
          }
        }
        story={
          Object {
            "id": "story-id",
            "isClosed": false,
          }
        }
      />
      <withProps(Relay(ReplyListContainer))
        comment={
          Object {
            "id": "comment-2",
          }
        }
        me={null}
        settings={
          Object {
            "reaction": Object {
              "icon": "thumb_up_alt",
              "label": "Respect",
            },
          }
        }
        story={
          Object {
            "id": "story-id",
            "isClosed": false,
          }
        }
      />
    </ForwardRef(forwardRef)>
  </ForwardRef(forwardRef)>
</ForwardRef(forwardRef)>
`;

exports[`when there is more disables load more button 1`] = `
<ForwardRef(forwardRef)
  className="Stream-root"
  size="double"
>
  <ForwardRef(forwardRef)>
    <withContext(createMutationContainer(withContext(createMutationContainer(withContext(createMutationContainer(withContext(withLocalStateContainer(Relay(UserBoxContainer)))))))))
      me={null}
      settings={
        Object {
          "reaction": Object {
            "icon": "thumb_up_alt",
            "label": "Respect",
          },
        }
      }
    />
    <Relay(CommunityGuidelinesContainerProps)
      settings={
        Object {
          "reaction": Object {
            "icon": "thumb_up_alt",
            "label": "Respect",
          },
        }
      }
    />
    <PostCommentFormFake />
  </ForwardRef(forwardRef)>
  <SortMenu
    onChange={[Function]}
    orderBy="CREATED_AT_ASC"
  />
  <ForwardRef(forwardRef)
    aria-live="polite"
    data-testid="comments-stream-log"
    id="talk-comments-stream-log"
    role="log"
  >
    <ForwardRef(forwardRef)
      key="comment-1"
    >
      <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
        comment={
          Object {
            "id": "comment-1",
          }
        }
        me={null}
        settings={
          Object {
            "reaction": Object {
              "icon": "thumb_up_alt",
              "label": "Respect",
            },
          }
        }
        story={
          Object {
            "id": "story-id",
            "isClosed": false,
          }
        }
      />
      <withProps(Relay(ReplyListContainer))
        comment={
          Object {
            "id": "comment-1",
          }
        }
        me={null}
        settings={
          Object {
            "reaction": Object {
              "icon": "thumb_up_alt",
              "label": "Respect",
            },
          }
        }
        story={
          Object {
            "id": "story-id",
            "isClosed": false,
          }
        }
      />
    </ForwardRef(forwardRef)>
    <ForwardRef(forwardRef)
      key="comment-2"
    >
      <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
        comment={
          Object {
            "id": "comment-2",
          }
        }
        me={null}
        settings={
          Object {
            "reaction": Object {
              "icon": "thumb_up_alt",
              "label": "Respect",
            },
          }
        }
        story={
          Object {
            "id": "story-id",
            "isClosed": false,
          }
        }
      />
      <withProps(Relay(ReplyListContainer))
        comment={
          Object {
            "id": "comment-2",
          }
        }
        me={null}
        settings={
          Object {
            "reaction": Object {
              "icon": "thumb_up_alt",
              "label": "Respect",
            },
          }
        }
        story={
          Object {
            "id": "story-id",
            "isClosed": false,
          }
        }
      />
    </ForwardRef(forwardRef)>
    <Localized
      id="comments-stream-loadMore"
    >
      <ForwardRef(forwardRef)
        aria-controls="talk-comments-stream-log"
        disabled={true}
        fullWidth={true}
        id="talk-comments-stream-loadMore"
        onClick={[Function]}
        variant="outlined"
      >
        Load More
      </ForwardRef(forwardRef)>
    </Localized>
  </ForwardRef(forwardRef)>
</ForwardRef(forwardRef)>
`;

exports[`when there is more renders a load more button 1`] = `
<ForwardRef(forwardRef)
  className="Stream-root"
  size="double"
>
  <ForwardRef(forwardRef)>
    <withContext(createMutationContainer(withContext(createMutationContainer(withContext(createMutationContainer(withContext(withLocalStateContainer(Relay(UserBoxContainer)))))))))
      me={null}
      settings={
        Object {
          "reaction": Object {
            "icon": "thumb_up_alt",
            "label": "Respect",
          },
        }
      }
    />
    <Relay(CommunityGuidelinesContainerProps)
      settings={
        Object {
          "reaction": Object {
            "icon": "thumb_up_alt",
            "label": "Respect",
          },
        }
      }
    />
    <PostCommentFormFake />
  </ForwardRef(forwardRef)>
  <SortMenu
    onChange={[Function]}
    orderBy="CREATED_AT_ASC"
  />
  <ForwardRef(forwardRef)
    aria-live="polite"
    data-testid="comments-stream-log"
    id="talk-comments-stream-log"
    role="log"
  >
    <ForwardRef(forwardRef)
      key="comment-1"
    >
      <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
        comment={
          Object {
            "id": "comment-1",
          }
        }
        me={null}
        settings={
          Object {
            "reaction": Object {
              "icon": "thumb_up_alt",
              "label": "Respect",
            },
          }
        }
        story={
          Object {
            "id": "story-id",
            "isClosed": false,
          }
        }
      />
      <withProps(Relay(ReplyListContainer))
        comment={
          Object {
            "id": "comment-1",
          }
        }
        me={null}
        settings={
          Object {
            "reaction": Object {
              "icon": "thumb_up_alt",
              "label": "Respect",
            },
          }
        }
        story={
          Object {
            "id": "story-id",
            "isClosed": false,
          }
        }
      />
    </ForwardRef(forwardRef)>
    <ForwardRef(forwardRef)
      key="comment-2"
    >
      <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
        comment={
          Object {
            "id": "comment-2",
          }
        }
        me={null}
        settings={
          Object {
            "reaction": Object {
              "icon": "thumb_up_alt",
              "label": "Respect",
            },
          }
        }
        story={
          Object {
            "id": "story-id",
            "isClosed": false,
          }
        }
      />
      <withProps(Relay(ReplyListContainer))
        comment={
          Object {
            "id": "comment-2",
          }
        }
        me={null}
        settings={
          Object {
            "reaction": Object {
              "icon": "thumb_up_alt",
              "label": "Respect",
            },
          }
        }
        story={
          Object {
            "id": "story-id",
            "isClosed": false,
          }
        }
      />
    </ForwardRef(forwardRef)>
    <Localized
      id="comments-stream-loadMore"
    >
      <ForwardRef(forwardRef)
        aria-controls="talk-comments-stream-log"
        disabled={false}
        fullWidth={true}
        id="talk-comments-stream-loadMore"
        onClick={[Function]}
        variant="outlined"
      >
        Load More
      </ForwardRef(forwardRef)>
    </Localized>
  </ForwardRef(forwardRef)>
</ForwardRef(forwardRef)>
`;

exports[`when use is logged in renders correctly 1`] = `
<ForwardRef(forwardRef)
  className="Stream-root"
  size="double"
>
  <ForwardRef(forwardRef)>
    <withContext(createMutationContainer(withContext(createMutationContainer(withContext(createMutationContainer(withContext(withLocalStateContainer(Relay(UserBoxContainer)))))))))
      me={Object {}}
      settings={
        Object {
          "reaction": Object {
            "icon": "thumb_up_alt",
            "label": "Respect",
          },
        }
      }
    />
    <Relay(CommunityGuidelinesContainerProps)
      settings={
        Object {
          "reaction": Object {
            "icon": "thumb_up_alt",
            "label": "Respect",
          },
        }
      }
    />
    <withContext(withContext(createMutationContainer(withContext(createFetchContainer(Relay(PostCommentFormContainer))))))
      settings={
        Object {
          "reaction": Object {
            "icon": "thumb_up_alt",
            "label": "Respect",
          },
        }
      }
      storyID="story-id"
    />
  </ForwardRef(forwardRef)>
  <SortMenu
    onChange={[Function]}
    orderBy="CREATED_AT_ASC"
  />
  <ForwardRef(forwardRef)
    aria-live="polite"
    data-testid="comments-stream-log"
    id="talk-comments-stream-log"
    role="log"
  >
    <ForwardRef(forwardRef)
      key="comment-1"
    >
      <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
        comment={
          Object {
            "id": "comment-1",
          }
        }
        me={Object {}}
        settings={
          Object {
            "reaction": Object {
              "icon": "thumb_up_alt",
              "label": "Respect",
            },
          }
        }
        story={
          Object {
            "id": "story-id",
            "isClosed": false,
          }
        }
      />
      <withProps(Relay(ReplyListContainer))
        comment={
          Object {
            "id": "comment-1",
          }
        }
        me={Object {}}
        settings={
          Object {
            "reaction": Object {
              "icon": "thumb_up_alt",
              "label": "Respect",
            },
          }
        }
        story={
          Object {
            "id": "story-id",
            "isClosed": false,
          }
        }
      />
    </ForwardRef(forwardRef)>
    <ForwardRef(forwardRef)
      key="comment-2"
    >
      <withContext(createMutationContainer(withContext(createMutationContainer(Relay(CommentContainer)))))
        comment={
          Object {
            "id": "comment-2",
          }
        }
        me={Object {}}
        settings={
          Object {
            "reaction": Object {
              "icon": "thumb_up_alt",
              "label": "Respect",
            },
          }
        }
        story={
          Object {
            "id": "story-id",
            "isClosed": false,
          }
        }
      />
      <withProps(Relay(ReplyListContainer))
        comment={
          Object {
            "id": "comment-2",
          }
        }
        me={Object {}}
        settings={
          Object {
            "reaction": Object {
              "icon": "thumb_up_alt",
              "label": "Respect",
            },
          }
        }
        story={
          Object {
            "id": "story-id",
            "isClosed": false,
          }
        }
      />
    </ForwardRef(forwardRef)>
  </ForwardRef(forwardRef)>
</ForwardRef(forwardRef)>
`;
